--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Association Moraine pour l'étude des glaciers des Pyrénées.
   Suivi de l'évolution campagnes de mesure de surface et de profondeur
   conférences diaporamas sorties thématiques.
-baseurl: "" # the subpath of your site, e.g. /blog/
+baseurl: "/asso.moraine" # the subpath of your site, e.g. /blog/
 
 # Build settings
 markdown: kramdown
